--- a/index.html
+++ b/index.html
@@ -44,6 +44,65 @@
 
         <a href="#" class="btn">Hire me</a>
     </section>
+
+    <section class="about" id="about">
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3 class="text-animation">
+            <span></span>
+        </h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non alias quis ea repellat et, quasi, nam delectus quidem vel cumque distinctio soluta qui odio maiores quibusdam ex eligendi dolores nemo.</p>
+        <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+
+        <footer class="footer">
+            <div class="social">
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></a>
+            <a href="#"><i class='bx bxl-facebook' ></i></a>
+            <a href="#"><i class='bx bxl-github' ></i></a>
+            </div>
+
+            <ul class="list">
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Privacy Policy</a>
+                </li>
+            </ul>
+            <p class="copyright">
+            © Bibesh Shrestha | All Right Reserved
+            </p>
+        </footer>
+    </section>
     
     <script src="script.js">
 
