--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 I'm a <span></span>
             </h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa amet magnam laboriosam incidunt iste, enim accusantium deserunt? Itaque accusamus quibusdam ad culpa sunt, perspiciatis magni, iste quisquam nam modi cupiditate.</p>
+            <p>Greetings! I am a passionate software engeering with a keen interest in Full Stack.</p>
         </div>
 
         <div class="social-icons">
@@ -51,7 +51,26 @@
             <h3 class="text-animation">
             <span></span>
         </h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non alias quis ea repellat et, quasi, nam delectus quidem vel cumque distinctio soluta qui odio maiores quibusdam ex eligendi dolores nemo.</p>
+        <p>I am currently pursing my Bachelor's degree in Computer Science and Information Technology (BscCSIT) at Tribhuvan University.</p>
+        
+        <div class="Skill">
+        <h2>Skills
+        </h2>
+        <h3>Langauges I have been using:</h3>
+        <ul class="list">
+            <li>
+                <a href="#">HTML<i class='bx bxl-html5'></i></a>
+            </li>
+            <li>
+                <a href="#">CSS<i class='bx bxl-css3' ></i></a>
+            </li>
+            <li>
+                <a href="#">JAVASCRIPT<i class='bx bxl-javascript' ></i></a>
+            </li>
+        </ul>
+
+        <p></p>
+        </div>
         <a href="#" class="btn">Read More</a>
         </div>
     </section>
